[package]
name = "doris_resource_topN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["json", "stream", "blocking"] }
scraper = "0.12.0"
tokio = { version = "1.37.0", features = ["full"] }
rand = { version = "0.7.3" }
serde = { version = "1.0.203", features = ["derive"] }
base64 = "0.21.7"
prettytable-rs = "0.10.0"
clap = "3.2.19"
rpassword = "5.0.1"